# aa-killstats

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: autotester.yml
.make/conf.d/: django.mk  tests.mk
killstats/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  constants.py  decorators.py  errors.py  forms.py  hooks.py  providers.py  signals.py  tasks.py  urls.py  views.py
killstats/api/: __init__.py  account_manager.py  helpers.py  killboard_manager.py  schema.py
killstats/api/killboard/: __init__.py  killboard.py  killboard_helper.py  killboard_manager.py
killstats/api/killboard/alliance/: killboard.py
killstats/api/killboard/corporation/: killboard.py  stats.py
killstats/api/killstats/: __init__.py  admin.py  api_helper.py  killboard.py  stats.py
killstats/docs/: explanation.md
killstats/helpers/: core.py  eveonline.py  killmail.py  static_files.py
killstats/locale/: django.pot
killstats/locale/de/LC_MESSAGES/: django.mo  django.po
killstats/locale/en/LC_MESSAGES/: django.po
killstats/locale/es/LC_MESSAGES/: django.po
killstats/locale/it_IT/LC_MESSAGES/: django.po
killstats/locale/ja/LC_MESSAGES/: django.po
killstats/locale/nl_NL/LC_MESSAGES/: django.po
killstats/locale/ru/LC_MESSAGES/: django.po
killstats/locale/sk/LC_MESSAGES/: django.po
killstats/locale/uk/LC_MESSAGES/: django.po
killstats/locale/zh_Hans/LC_MESSAGES/: django.po
killstats/management/commands/: killstats_migrate_eveentity.py  killstats_migrate_old_killmails.py  migrate_old_killmails.py
killstats/managers/: general_manager.py  killboard_manager.py  killboardaudit_manager.py  killmail_core.py
killstats/migrations/: 0001_init_v2.py  0001_initial.py  0002_rename_killstatsaudit_corporationsaudit_and_more.py  0003_alter_killmail_victim_attacker.py  0003_attacker_remove_killmail_attackers_and_more.py  0004_delete_eveentity.py  0004_delete_eveentity_and_attackers.py  0004_migrate_attacker.py  0005_alter_general_options.py  0006_alter_attacker_weapon_type_id_and_more.py  0007_eveentity.py  0008_alter_attacker_alliance_alter_attacker_character_and_more.py  0008_migrate_eveentity_alter_fields.py
killstats/models/: __init__.py  general.py  killboard.py  killstatsaudit.py
killstats/static/killstats/css/: cards.css  custom.css  killstats.css
killstats/static/killstats/js/: common-scripts.js  killboard.js  killstats.js
killstats/templates/killstats/: base.html  killboard.html  killmail_add.html  menu.html
killstats/templates/killstats/admin/: alliance_admin.html  corporation_admin.html
killstats/templates/killstats/bundles/: killboard-js.html  killstats-css.html
killstats/templates/killstats/killboard/: corpevent.html  dashboard.html  hall.html  killboard-js.html  kills.html  losses.html
killstats/templates/killstats/partials/: dashboard.html  hall.html  kills.html  losses.html  stats.html
killstats/templates/killstats/partials/information/: view_top_10.html
killstats/templates/killstats/partials/menu/: administration.html  navigation.html
killstats/templates/killstats/partials/modal/: modal.html  view_top_10.html
killstats/templatetags/: killstats.py
killstats/tests/: __init__.py  test_admin.py  test_auth_hook.py  test_decarators.py  test_helpers.py  test_hooks.py  test_task.py  test_tasks.py  test_templatetags.py  test_views.py  zkb_example.json  zkb_package.json  zkb_r2d2.json  zkb_redisq.json  zkb_redisq_new.json
killstats/tests/api/: test_helpers.py
killstats/tests/helpers/: test_eveonline.py  test_killmail.py
killstats/tests/killmail_body/: test_get_single_killmail.py
killstats/tests/test_api/: _alliance_api.py  _api_helper.py  _killstasts_api.py  _stats_api.py  killstasts_api.py  test_accountmanager.py  test_alliance_api.py  test_allianceapi.py  test_api_helper.py  test_corporation_api.py  test_corporationssapi.py  test_killboard_manager.py  test_killstatsapi.py  test_stats_api.py
killstats/tests/test_managers/: test_general.py  test_general_manager.py  test_killboard_manager.py  test_killboardaudit.py
killstats/tests/test_models/: test_attacker.py  test_general.py  test_killaudit.py  test_killboard.py
killstats/tests/test_views/: test_access.py  test_add_alliance.py  test_add_corp.py
killstats/tests/testdata/: allianceauth.json  esi_test_data.json  eveentity.json  eveentity.py  eveuniverse.json  generate_killmail.py  generate_killstats.py  get_bulk.json  killmails.json  load_allianceauth.py  load_killstats.py  utils.py  zkb.json  zkb_redis.json
testauth/settings/: base.py  local.py
testauth/settings/aa5/: local.py
