[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-killstats"
description = "Killboard Stats shows Hall of Shame/Fame, Kills, Top Kills,Loss,etc."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Geuthur", email = "devgeuthur@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.10,<5",
    "allianceauth-app-utils>=1.3",
    "dacite",
    "django-esi>=8,<9",
    "django-eveuniverse>=1.6",
    "django-ninja",
]
optional-dependencies.tests-allianceauth-latest = [
    "coverage",
    "factory-boy",
]
urls.Changelog = "https://github.com/Geuthur/aa-killstats/blob/master/CHANGELOG.md"
urls.Documentation = "https://github.com/Geuthur/aa-killstats/blob/master/README.md"
urls.Donations = "https://ko-fi.com/Geuthur"
urls.Homepage = "https://github.com/Geuthur/aa-killstats"
urls.Source = "https://github.com/Geuthur/aa-killstats"
urls.Tracker = "https://github.com/Geuthur/aa-killstats/issues"

[tool.hatch.build]
include = [
    "/killstats",
]

[tool.hatch.version]
path = "killstats/__init__.py"
